2010-08-06  Ulrich Drepper  <drepper@redhat.com>

	* sysdeps/unix/sysv/linux/getlogin_r.c (__getlogin_r_loginuid):
	Also fail if tpwd after pwuid call is NULL.

2010-07-31  Samuel Thibault  <samuel.thibault@ens-lyon.org>

	* hurd/hurdselect.c (_hurd_select): Round timeout up instead of down
	when converting to ms.

2010-06-06  Samuel Thibault  <samuel.thibault@ens-lyon.org>

	* sysdeps/mach/hurd/ttyname.c (ttyname): Replace MIG_BAD_ID and
	EOPNOTSUPP errors with ENOTTY.
	* sysdeps/mach/hurd/ttyname_r.c (__ttyname_r): Replace MIG_BAD_ID and
	EOPNOTSUPP errors with ENOTTY.

2010-07-31  Ulrich Drepper  <drepper@redhat.com>

	* sysdeps/x86_64/multiarch/Makefile [subdir=string] (sysdep_routines):
	Add strcasecmp_l-ssse3.
	* sysdeps/x86_64/multiarch/strcmp.S: Add support to compile for
	strcasecmp.
	* sysdeps/x86_64/strcmp.S: Allow more flexible compiling of strcasecmp.
	* sysdeps/x86_64/multiarch/strcasecmp_l.S: New file.
	* sysdeps/x86_64/multiarch/strcasecmp_l-ssse3.S: New file.

2010-07-30  Ulrich Drepper  <drepper@redhat.com>

	* sysdeps/x86_64/multiarch/strcmp.S: Pretty printing.

	* string/Makefile (strop-tests): Add strcasecmp.
	* sysdeps/x86_64/Makefile [subdir=string] (sysdep_routines): Add
	strcasecmp_l-nonascii.
	(gen-as-const-headers): Add locale-defines.sym.
	* sysdeps/x86_64/strcmp.S: Add support for strcasecmp implementation.
	* sysdeps/x86_64/strcasecmp.S: New file.
	* sysdeps/x86_64/strcasecmp_l.S: New file.
	* sysdeps/x86_64/strcasecmp_l-nonascii.c: New file.
	* sysdeps/x86_64/locale-defines.sym: New file.
	* string/test-strcasecmp.c: New file.

	* string/test-strcasestr.c: Test both ends of the range of characters.
	* sysdeps/x86_64/multiarch/strstr.c: Fix UCHIGH definition.

2010-07-29  Roland McGrath  <roland@redhat.com>

	[BZ #11856]
	* manual/locale.texi (Yes-or-No Questions): Fix example code.

2010-07-27  Ulrich Drepper  <drepper@redhat.com>

	* sysdeps/x86_64/multiarch/strcmp-ssse3.S: Avoid compiling the file
	for ld.so.
